--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 src="./assets/leetcode.png"
                 alt="My LeetCode profile"
                 class="icon"
-                onclick="window.open('https://leetcode.com/u/sujit_161001/ '_blank')"
+                onclick="window.open('https://leetcode.com/u/sujit_161001/', '_blank')"
             />
         </div>
         </div>
