updated_projects'_about

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 Github
                 <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/the-illuminatus/tomper-wear-ecommerce/blob/main/README.md, '_blank')"
+                onclick="window.open('https://github.com/the-illuminatus/tomper-wear-ecommerce/blob/main/README.md', '_blank')"
                 >
                 About
                 </button>
