--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <p style="text-align: justify;">
                 Welcome to my portfolio! I am a dedicated software developer with a strong affinity for the sciences, particularly physics and mathematics. My passion lies in uncovering how things work, solving intricate problems, and crafting elegant solutions. Driven by curiosity, I seek to understand the underlying principles behind every challenge I encounter. Whether developing new features or troubleshooting complex systems, I approach each task with a keen problem-solving mindset. As a collaborative team player, I thrive in environments where ideas are shared, and innovation flourishes. Let's connect and create something extraordinary together!
                 <br/><br/>
-                During my 1.4 years at <strong>Tata Consultancy Services (TCS)</strong>, I served as a backend engineer on a comprehensive banking project. Leveraging the Java Spring Boot tech stack, I developed and maintained robust, scalable backend systems that powered essential banking services. My role involved designing efficient APIs, ensuring seamless integration, and optimizing performance to deliver a smooth, reliable user experience. Collaborating closely with cross-functional teams, I contributed to the successful delivery of key project milestones.
-            </p>
+During my tenure at <strong>Tata Consultancy Services (TCS)</strong>, I played a pivotal role in migrating on-premises databases to AWS Redshift. I developed Python-based automated data validation frameworks, ensuring accuracy across large datasets. I integrated CI/CD pipelines with Git for efficient version control and deployment. I conducted cross-platform testing and optimized AWS resource performance. Additionally, I ensured the migration adhered to AWS security and compliance best practices, delivering a secure and scalable solution.</p>
             </div>
         </div>
         </div>
